fix: swipe carouel not working correctly on mobile

--- a/src/components/CrewCarousel/CrewCarousel.module.css
+++ b/src/components/CrewCarousel/CrewCarousel.module.css
@@ -8,6 +8,7 @@
 
 .crewCarousel :global(.carousel__indicators) {
   top: 0;
+  bottom: auto;
 }
 
 .crewCarousel :global(.carousel__indicator) {
